# RO_1516

./: .gitignore  README.md
src/ackermann_vehicle/: README.md
src/ackermann_vehicle/ackermann_vehicle_description/: visual.rviz
src/ackermann_vehicle/ackermann_vehicle_gazebo/launch/: ackermann_vehicle.launch.bak
src/ackermann_vehicle_13/ackermann_vehicle_13/: CMakeLists.txt  package.xml
src/ackermann_vehicle_13/ackermann_vehicle_13_description/: CMakeLists.txt  package.xml  visual.rviz
src/ackermann_vehicle_13/ackermann_vehicle_13_description/launch/: ackermann_vehicle_13.launch  ackermann_vehicle_13_rviz.launch  rviz.launch
src/ackermann_vehicle_13/ackermann_vehicle_13_gazebo/: CMakeLists.txt  package.xml
src/ackermann_vehicle_13/ackermann_vehicle_13_gazebo/launch/: ackermann_vehicle131.launch  ackermann_vehicle_13_.launch  kalman.launch
src/ackermann_vehicle_13/ackermann_vehicle_13_gazebo/src/: kalman.cpp
src/ackermann_vehicle_13/ackermann_vehicle_13_gazebo/worlds/: obstacle.world  parking_etsii.world
src/arm2r/: CMakeLists.txt  README.md  package.xml
src/arm2r/launch/: display.launch
src/arm2r/src/: arm2r_tf_listener.cpp
src/arm2r/src/u04/: .srv_set_pose.cpp.swp  client.cpp  srv_set_pose.cpp
src/arm2r/srv/: SetPose.srv
src/arm2r/urdf/: arm2r.urdf.xacro
src/rrbot/: README.md
src/showing_path/: CMakeLists.txt  README.md  package.xml
src/showing_path/launch/: display.launch
src/showing_path/src/: showing_path_node.cpp
src/spline_test/: CMakeLists.txt  README.md  package.xml
src/spline_test/launch/: display.launch  spline_test.rviz
src/spline_test/src/: spline_test.cpp
src/u03/: CMakeLists.txt  package.xml  talker.py
src/u04/: warum_ist_es_hier_so_leer.txt
src/u05/: CMakeLists.txt  package.xml
src/u05/config/: controllers.yaml  rviz.rviz
src/u05/launch/: gazebo.launch  rviz.launch  trike.launch
src/u05/model/: trike.gazebo  trike.urdf.xacro  trike.xacro
src/u06/: CMakeLists.txt  package.xml
src/u06/config/: config.rviz
src/u06/launch/: rqt.launch  rviz.launch
src/u06/model/: arm.xacro
src/u06/src/: trajectory.cpp
src/u07/: package.xml
src/u07/src/: controller.cpp  controller.h
src/u08/src/: CMakeLists.txt  astar.cpp  astar.h
src/u09/: CMakeLists.txt  package.xml
src/u09/config/: config.rviz
src/u09/launch/: launch.launch
src/u09/src/: astar.h  main.cpp
src/u10/src/: CMakeLists.txt  PF.cpp  PF.h  test.cpp
src/u11/: CMakeLists.txt  package.xml
src/u11/config/: config.rviz
src/u11/launch/: draw.launch  drive_now.launch  drive_sim.launch
src/u11/src/: PID.cpp  PID.h  draw.cpp  drive.cpp  rrt.cpp  rrt.h
ub/: assignment_template.tex
ub/u01/: RO-01-Auer.tex
ub/u02/: RO-02-Auer.tex  RO-02-Auer.xacro
ub/u03/: RO-03-Auer.tex  listener.py
ub/u04/: RO-04-Auer.tex  client.cpp  rrbot.gazebo.xacro  rrbot.urdf.xacro
ub/u05/: RO-05-Auer_Tegethoff.tex
ub/u06/: RO-06-Auer_Tegethoff.tex
ub/u07/: RO-07-Auer-Tegethoff.tex  pid.txt
ub/u08/: RO-08-Auer-Tegethoff.tex
ub/u09/: RO-09-Auer-Tegethoff.tex
ub/u10/: RO-10-Auer-Tegethoff.tex
ub/u11/: RO-11-Auer-Tegethoff.tex
ub/u12/: RO-11-Auer-Tegethoff.tex  RO-12-Auer-Tegethoff.tex
ub/u13/: RO-13-Auer-Tegethoff.tex
